# mosstool

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: workflow.yml
data/: README.md
data/cad/: cad.xlsx
data/euluc-china-2018/: README.md
data/geojson/: fixed_net.geojson  fixed_net_with_z.geojson  net.geojson  net_with_z.geojson  split_box.geojson
data/gravitygenerator/: worldpop.npy
data/gravitygenerator/Beijing-shp/: beijing.dbf  beijing.shp  beijing.shx
data/map/: m.pb
data/sumo/: additional.xml  trafficlight.xml  trips.xml
docs/: conf.py  index.md
docs/02-quick-start/: 01-map-building.md  index.rst
docs/05-advanced-usage/: index.rst
docs/apidocs/: index.rst
docs/apidocs/mosstool/: mosstool.map._util.angle.md  mosstool.map._util.bezier.md  mosstool.map._util.line.md  mosstool.map._util.md  mosstool.map.md  (+43 more)
examples/: add_pt_post_process.py  add_pt_to_map.py  build_map.py  gen_pt_drivers.py  gravity.py  map_aoi_geojson.py  map_cad2geojson.py  map_osm2geojson.py  map_poi_geojson.py  merge_map.py  random_persons.py  split_map.py  sta.py  sumo_map_convert.py  sumo_route_convert.py  template_generator.py  trip_generate_aigc_od.py  trip_generate_gravity_od.py  vis_map.py  vis_trip.py
mosstool/: __init__.py
mosstool/map/: __init__.py
mosstool/trip/: __init__.py
mosstool/type/: __init__.py
mosstool/util/: __init__.py  color.py  format_converter.py  geo_match_pop.py  map_merger.py  map_splitter.py
scripts/: gen_docs.sh  run_test.sh
(+60 files in other folders)
