[tool.poetry]
name = "mosstool"
version = "0.2.20"
description = "MObility Simulation System toolbox "
authors = ["Jun Zhang <zhangjun990222@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
geojson = "^3.1.0"
networkx = "^3.2.1"
pydeck = "^0.8.0"
shapely = "^2.0.3"
stringcase = "^1.2.0"
pymongo = "^4.6.2"
pytest-coverage = "^0.0"
pyproj = "^3.6.1"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"
numpy = "^1.20.0"
geopandas = "^0.14.3"
requests = "^2.30.0"
rasterio = "1.3.9"
pycityproto = "^1.19.1"
lxml = "^5.1.0"
coord-convert = "^0.2.1"
levenshtein = "^0.25.0"
bs4 = "^0.0.2"
matplotlib = "^3.8.3"
generate-od = "^0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-dotenv = "^0.5.2"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
